# WeedBuster-YOLO-Powered-Precision-Weed-Detection-Laser-Removal-System

./: .gitignore  README.md  README_GITHUB.md  README_cn.md  check_log.py  check_status.py  debug_vision_servo.py  deploy_and_start.py  deploy_asr.py  deploy_fix.py  deploy_vs.py  start_all.sh  start_car.py  start_local_asr.bat  stop_all.sh  手机终端软件需求与可行方向_v1.0.md  指令.txt  硬件层需求分析文档_v1.1_实际硬件适配版.md
car_code/: add_bpu_precise.py  add_bpu_support.py  add_frontend_freq_simple.py  analyze_quant_info.py  analyze_strike_logs.py  calib_params.yaml  check_bpu_availability.py  export_for_rdk_x5.py  export_yolo26_detect_bpu.py  generate_yolov8_bpu_config.py  patch_frontend_freq_control.py  patch_improve_nms.py  patch_vision_servo.py  patch_yolo_bpu_and_freq.py  save_spot.py  servo_jacobian_test.py  test_dn.py  test_s3.py  test_s4.py  test_servo.py
code/总交接包_v3.10.0/: README_v3.10.0_交接.md  servo_direction_test.py  历史_交接手册_v3.9.9.md
code/总交接包_v3.10.0/laser_calibration/: package.xml  setup.py
code/总交接包_v3.10.0/laser_calibration/laser_calibration/: __init__.py  calib_diffuse.py  calib_io.py  calib_laser_offset.py  config.py  show_calib.py  stereo_camera.py  test_model_on_car.py  vision_servo.py  yolo_detector.py
code/总交接包_v3.10.0/laser_calibration/models/: config.yaml
docx/: ASR语音指令集.md
laser-weeding-rdkx5-new/: .gitignore  LICENSE  README.md
laser-weeding-rdkx5-new/laser_calibration/: package.xml  setup.cfg
laser_calibration/: package.xml  setup.py
laser_calibration/laser_calibration/: __init__.py  analyze_strike_logs.py  asr_server.py  calib_camera_align.py  config.py  (+8 more)
(+37 files in other folders)
