<?xml version="1.0"?>
<package format="3">
  <name>laser_calibration</name>
  <version>3.0.0</version>
  <description>
    双目多光谱感知与闭环激光打击系统 ——
    Phase 1 开机静态标定（双目对齐 + 激光偏移）+
    Phase 2 NDVI 植物健康检测
  </description>
  <maintainer email="team@example.com">team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>python3-yaml</depend>

  <exec_depend>v4l-utils</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
